--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.0",
     "popper.js": "^1.14.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
