--- a/back/package.json
+++ b/back/package.json
@@ -16,10 +16,12 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
+    "m": "^1.3.1",
     "moment": "^2.21.0",
     "mongoose": "^5.0.10",
     "mongoose-auto-increment": "^5.0.1",
-    "mongoose-type-email": "^1.0.5"
+    "mongoose-type-email": "^1.0.5",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
