--- a/back/package.json
+++ b/back/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.0.10",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-type-email": "^1.0.5",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "npm": "^5.8.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
